--- a/payment-impl/pom.xml
+++ b/payment-impl/pom.xml
@@ -31,6 +31,7 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
         </dependency>
+
         <!--Utils-->
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -43,6 +44,10 @@
         <dependency>
             <groupId>org.codehaus.janino</groupId>
             <artifactId>janino</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
         </dependency>
 
         <!-- Tests -->
