--- a/payment-impl/pom.xml
+++ b/payment-impl/pom.xml
@@ -18,6 +18,16 @@
             <artifactId>payment-domain</artifactId>
         </dependency>
 
+        <!-- Spring -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
+
         <!--JPA/Database-->
         <dependency>
             <groupId>org.hibernate</groupId>
